--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.0.3",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.4",
     "mongoose-paginate-v2": "^1.7.4",
     "socket.io": "^4.7.2"
   }
