--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^8.0.4",
     "mongoose-paginate-v2": "^1.7.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   }
 }
