se agrega logger en controllers

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
 MONGO_URL= "mongodb+srv://slperez:slperez@cluster0.6bqcjjp.mongodb.net/ecommerce"
 SECRET= "CoderSecret"
+NODE_ENV=development
