--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT=8080
 MONGO_URL= "mongodb+srv://slperez:slperez@cluster0.6bqcjjp.mongodb.net/ecommerce"
 SECRET= "CoderSecret"
 NODE_ENV=development
+
+MAILING_USER=sluciano.perez@gmail.com
+MAILING_PASSWORD=qlyrdeyncvsruuer
+MAILING_SERVICE="gmail"
