--- a/src/docs/Carts/Carts.yaml
+++ b/src/docs/Carts/Carts.yaml
@@ -7,5 +7,27 @@ paths:
       responses:
         '200':
           description: Obtiene todos los carritos de la base de datos
+          content:
+            aplication/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schemas/Cart'
         '500':
           description: Error interno del servidor
+
+
+components:
+  schemas:
+    Cart:
+      type: object
+      properties:
+        _id:
+          type: ObjectId
+          description: Id del Carrito
+        products:
+          type: array
+          description: productos en carrito
+          items:
+            type: object
+            description: producto
