--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -3,9 +3,76 @@ paths:
     get:
       summary: Obtener todos los productos
       tags:
-        - Productos
+        - Products
       responses:
         '200':
           description: Obtiene todos los productos de la base de datos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schemas/Product'
         '500':
           description: Error en el servidor
+    post:
+      summary: Crear producto
+      tags:
+        - Products
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#components/requestBodies/UpdateProduct'
+      responses:
+        '200':
+          description: El producto se creo correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: "#components/schemas/Product"
+        '500':
+          description: Error en el servidor
+
+components:
+  schemas:
+    Product:
+      type: object
+      properties:
+        _id:
+          type: ObjectId
+          description: id del producto
+        title:
+          type: string
+          description: Titulo del producto
+        description:
+          type: string
+          description: Descripcion del producto
+        code:
+          type: string
+          description: Codigo del producto
+        price:
+          type: number
+          description: Precio del producto
+        status:
+          type: boolean
+          description: 
+        stock:
+          type: number
+          description: Unidades disponibles del producto
+        category:
+          type: string
+          description: Categoria del producto
+        thumbnail:
+          type: array
+          description: url del producto
+          items:
+            type: string
+            description: url de imagen del producto
+
