agrego docu de put de products

--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -40,6 +40,39 @@ paths:
         '500':
           description: Error en el servidor
 
+  /api/products/{pid}:
+     put:
+      summary: Actualizar producto
+      tags:
+        - Products
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: pid es el id del producto que quiere actualizar
+          schema:
+            $type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#components/requestBodies/UpdateProduct'
+      responses:
+        '200':
+          description: El producto se actualizo correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: "#components/schemas/Product"
+        '500':
+          description: Error en el servidor
+
 components:
   schemas:
     Product:
