--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -41,7 +41,33 @@ paths:
           description: Error en el servidor
 
   /api/products/{pid}:
-     put:
+    get:
+      summary: obtener producto por id
+      tags:
+        - Products
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: pid es el id del producto que quiere obtener
+          schema:
+            $type: string
+      responses:
+        '200':
+          description: El producto se creo correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: "#components/schemas/Product"
+        '500':
+          description: Error en el servidor
+          
+    put:
       summary: Actualizar producto
       tags:
         - Products
@@ -72,6 +98,33 @@ paths:
                     $ref: "#components/schemas/Product"
         '500':
           description: Error en el servidor
+
+    delete:
+      summary: Eliminar producto
+      tags:
+        - Products
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: pid es el id del producto que quiere eliminar
+          schema:
+            $type: string
+      responses:
+        '200':
+          description: El producto se elimino correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: "#components/schemas/Product"
+        '500':
+          description: Error en el servidor
+
 
 components:
   schemas:
