--- a/src/docs/Carts/Carts.yaml
+++ b/src/docs/Carts/Carts.yaml
@@ -15,7 +15,222 @@ paths:
                   $ref: '#components/schemas/Cart'
         '500':
           description: Error interno del servidor
+    post:
+      summary: Crear Carrito
+      tags:
+        - Carts
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#components/requestBodies/UpdateCart'
+      responses:
+        '200':
+          description: El Carrito se creo correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: "#components/schemas/Cart"
+        '500':
+          description: Error en el servidor
 
+  /api/carts/{cid}:
+    get:
+      summary: Obtener un carrito
+      tags:
+        - Carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: cid es el id del carrito que quiere obtener
+          schema:
+            $type: string
+      responses:
+        '200':
+          description: Obtiene un carrito de la base de datos
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: '#components/schemas/Cart'
+        '500':
+          description: Error interno del servidor
+    put:
+      summary: agregar varios productos al carrito
+      tags:
+        - Carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: cid es el id del carrito que quiere obtener
+          schema:
+            $type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#components/requestBodies/UpdateProduct'
+      responses:
+        '200':
+          description: agrega varios productos a un carritos
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: '#components/schemas/Cart'
+        '500':
+          description: Error interno del servidor
+    delete:
+      summary: Vaciar un carrito
+      tags:
+        - Carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: cid es el id del carrito que quiere vaciar
+          schema:
+            $type: string
+      responses:
+        '200':
+          description: Vacia un carrito de la base de datos
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: '#components/schemas/Cart'
+        '500':
+          description: Error interno del servidor
+
+  /api/carts/{cid}/products/{pid}:
+    post:
+      summary: Agrega un producto al carrito
+      tags:
+        - Carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: cid es el id del carrito que quiere obtener
+          schema:
+            $type: string
+        - name: pid
+          in: path
+          required: true
+          description: pid es el id del producto que quiere guardar en carrito
+          schema:
+            $type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#components/requestBodies/UpdateProductInCart'
+      responses:
+        '200':
+          description: Se agrego un producto al carrito exitosamente
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: '#components/schemas/Cart'
+        '500':
+          description: Error interno del servidor
+    put:
+      summary: actualiza un producto del carrito
+      tags:
+        - Carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: cid es el id del carrito que quiere obtener
+          schema:
+            $type: string
+        - name: pid
+          in: path
+          required: true
+          description: pid es el id del producto que quiere actualizar
+          schema:
+            $type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#components/requestBodies/UpdateProductInCart'
+      responses:
+        '200':
+          description: Producto actualizado correctamente
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: '#components/schemas/Cart'
+        '500':
+          description: Error interno del servidor
+    delete:
+      summary: borrar producto en carrito
+      tags:
+        - Carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: cid es el id del carrito que quiere obtener
+          schema:
+            $type: string
+        - name: pid
+          in: path
+          required: true
+          description: pid es el id del producto que quiere borrar del carrito
+          schema:
+            $type: string
+      responses:
+        '200':
+          description: Producto eliminado del carrito correctamente
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  payload:
+                    $ref: '#components/schemas/Cart'
+        '500':
+          description: Error interno del servidor
 
 components:
   schemas:
@@ -31,3 +246,26 @@ components:
           items:
             type: object
             description: producto
+      example:
+        _id: ObjectId('6584fda89923fd83f368eee4')
+        products: []
+  requestBodies:
+    UpdateCart:
+      type: object
+      properties:
+        products:
+          type: array
+          description: Titulo del producto
+          items:
+            type: object
+            description: Producto en carrito
+      example:
+        products: []
+    UpdateProductInCart:
+      type: object
+      properties:
+        quantity:
+          type: number
+          description: Cantidad del producto
+      example:
+        quantity: 2
