--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "winston": "^3.12.0"
   },
   "devDependencies": {
